tests/pass/mut.ct
def main(argc: int, argv: **var(char)): int {
    **argv = 25;
    return 0;
}