tests/fail/array-2.ct
def thing(): int {
    return 25;
}

var x: [int:thing()];
